--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Hosting Service</title>
     <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="mobile.css" media="(max-width: 525px)"/>
   </head>
   <body>
     <header id="header">
@@ -160,7 +161,7 @@
 
       <!-- pricing section -->
       <section id="pricing-section">
-        <h1>Flexible & Transparent Pricing </h1>
+        <h1>Flexible & Transparent <br> Pricing </h1>
         <div class="pricing-boxs">
 
           <!-- starter -->
