--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <header id="header">
       <div class="h-logo">
         <img src="./assets/Logo.png" alt="The head Logo" />
+        <img class="toggle" src="./assets/angle-down-solid.svg" alt="">
       </div>
       <div class="h-items">
         <ul>
